...
              textAlign = TextAlign.Center,
              style = MaterialTheme.typography.titleSmall,
          )

          // Product
          ExposedDropdownMenuSample(
              listOf("Tampons", "Pads", "No Preference"),
              "Product Needed",
              "Please choose a product",
              AlertScreen.PRODUCT_FIELD,
              setProductIsSelected,
          )

          // Urgency
          ExposedDropdownMenuSample(
              listOf("!!! High", "!! Medium", "! Low"),
              "Urgency level",
              "Please choose an urgency level",
              AlertScreen.URGENCY_FIELD,
              setUrgencyIsSelected,
          )

...
